[project]
name = "ktod"
version = "0.1.0"
description = "Advanced todo list"
authors = [
    {name = "KevBoyz",email = "kevboyz@pm.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

